--- a/FavouritePlaces/Base.lproj/Main.storyboard
+++ b/FavouritePlaces/Base.lproj/Main.storyboard
@@ -336,26 +336,26 @@
                                                         <constraint firstAttribute="width" constant="75" id="pRD-MC-6JZ"/>
                                                     </constraints>
                                                 </imageView>
-                                                <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="5Wh-vM-LA3">
+                                                <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="5Wh-vM-LA3">
                                                     <rect key="frame" x="101" y="10" width="308" height="85.666666666666671"/>
                                                     <subviews>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="u38-XH-zdu">
-                                                            <rect key="frame" x="0.0" y="0.3333333333333357" width="173" height="85.333333333333314"/>
+                                                            <rect key="frame" x="0.0" y="0.3333333333333357" width="205" height="85.333333333333314"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zCb-yk-9tr">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="173" height="26.666666666666668"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zCb-yk-9tr">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="205" height="26.666666666666668"/>
                                                                     <fontDescription key="fontDescription" name="EuphemiaUCAS" family="Euphemia UCAS" pointSize="20"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CNI-fZ-pFW">
-                                                                    <rect key="frame" x="0.0" y="36.666666666666664" width="173" height="20"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CNI-fZ-pFW">
+                                                                    <rect key="frame" x="0.0" y="36.666666666666664" width="205" height="20"/>
                                                                     <fontDescription key="fontDescription" name="EuphemiaUCAS" family="Euphemia UCAS" pointSize="15"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fUZ-CA-yOt">
-                                                                    <rect key="frame" x="0.0" y="66.666666666666671" width="173" height="18.666666666666671"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fUZ-CA-yOt">
+                                                                    <rect key="frame" x="0.0" y="66.666666666666671" width="205" height="18.666666666666671"/>
                                                                     <fontDescription key="fontDescription" name="EuphemiaUCAS" family="Euphemia UCAS" pointSize="14"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
@@ -363,56 +363,56 @@
                                                             </subviews>
                                                         </stackView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="125" placeholderIntrinsicHeight="25" translatesAutoresizingMaskIntoConstraints="NO" id="UJK-xt-66B">
-                                                            <rect key="frame" x="183" y="30.333333333333336" width="125" height="25"/>
+                                                            <rect key="frame" x="208" y="33" width="100" height="20"/>
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="emptyStar" translatesAutoresizingMaskIntoConstraints="NO" id="pLy-PQ-2WG">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="25" height="25"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
                                                                     <accessibility key="accessibilityConfiguration">
                                                                         <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
                                                                     </accessibility>
                                                                     <constraints>
-                                                                        <constraint firstAttribute="width" constant="25" id="6FG-cD-LiH"/>
-                                                                        <constraint firstAttribute="height" constant="25" id="Fb7-Xc-B3N"/>
+                                                                        <constraint firstAttribute="width" constant="20" id="6FG-cD-LiH"/>
+                                                                        <constraint firstAttribute="height" constant="20" id="Fb7-Xc-B3N"/>
                                                                     </constraints>
                                                                 </imageView>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="emptyStar" translatesAutoresizingMaskIntoConstraints="NO" id="vEv-1a-uE5">
-                                                                    <rect key="frame" x="25" y="0.0" width="25" height="25"/>
+                                                                    <rect key="frame" x="20" y="0.0" width="20" height="20"/>
                                                                     <accessibility key="accessibilityConfiguration">
                                                                         <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
                                                                     </accessibility>
                                                                     <constraints>
-                                                                        <constraint firstAttribute="width" constant="25" id="97u-gO-Oa5"/>
-                                                                        <constraint firstAttribute="height" constant="25" id="hQu-cZ-W4m"/>
+                                                                        <constraint firstAttribute="width" constant="20" id="97u-gO-Oa5"/>
+                                                                        <constraint firstAttribute="height" constant="20" id="hQu-cZ-W4m"/>
                                                                     </constraints>
                                                                 </imageView>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="emptyStar" translatesAutoresizingMaskIntoConstraints="NO" id="OF2-LC-TxQ">
-                                                                    <rect key="frame" x="50" y="0.0" width="25" height="25"/>
+                                                                    <rect key="frame" x="40" y="0.0" width="20" height="20"/>
                                                                     <accessibility key="accessibilityConfiguration">
                                                                         <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
                                                                     </accessibility>
                                                                     <constraints>
-                                                                        <constraint firstAttribute="height" constant="25" id="9nU-Cj-rDz"/>
-                                                                        <constraint firstAttribute="width" constant="25" id="aND-LC-x3H"/>
+                                                                        <constraint firstAttribute="height" constant="20" id="9nU-Cj-rDz"/>
+                                                                        <constraint firstAttribute="width" constant="20" id="aND-LC-x3H"/>
                                                                     </constraints>
                                                                 </imageView>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="emptyStar" translatesAutoresizingMaskIntoConstraints="NO" id="SSU-Fz-AdF">
-                                                                    <rect key="frame" x="75" y="0.0" width="25" height="25"/>
+                                                                    <rect key="frame" x="60" y="0.0" width="20" height="20"/>
                                                                     <accessibility key="accessibilityConfiguration">
                                                                         <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
                                                                     </accessibility>
                                                                     <constraints>
-                                                                        <constraint firstAttribute="height" constant="25" id="1ma-Rq-NLM"/>
-                                                                        <constraint firstAttribute="width" constant="25" id="MVp-bL-rbW"/>
+                                                                        <constraint firstAttribute="height" constant="20" id="1ma-Rq-NLM"/>
+                                                                        <constraint firstAttribute="width" constant="20" id="MVp-bL-rbW"/>
                                                                     </constraints>
                                                                 </imageView>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="emptyStar" translatesAutoresizingMaskIntoConstraints="NO" id="UhU-KF-aL5">
-                                                                    <rect key="frame" x="100" y="0.0" width="25" height="25"/>
+                                                                    <rect key="frame" x="80" y="0.0" width="20" height="20"/>
                                                                     <accessibility key="accessibilityConfiguration">
                                                                         <accessibilityTraits key="traits" image="YES" notEnabled="YES"/>
                                                                     </accessibility>
                                                                     <constraints>
-                                                                        <constraint firstAttribute="width" constant="25" id="OjN-lb-9A7"/>
-                                                                        <constraint firstAttribute="height" constant="25" id="oi5-Bj-g08"/>
+                                                                        <constraint firstAttribute="width" constant="20" id="OjN-lb-9A7"/>
+                                                                        <constraint firstAttribute="height" constant="20" id="oi5-Bj-g08"/>
                                                                     </constraints>
                                                                 </imageView>
                                                             </subviews>
